--- a/age.html
+++ b/age.html
@@ -120,6 +120,15 @@
   ]
 }
   </script>
+
+<!-- Tailwind CSS -->
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<script src="search.js" defer></script>
+
 <style>
     /* Design tokens */
     :root{
@@ -239,11 +248,63 @@
 <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
 
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900">
 
-<h1 id="page-title">Age Calculator</h1>
-<p class="container">Use this authoritative age calculator to compute the exact time between your date of birth and any “as of” date. Designed for everyday use and professional contexts, it returns your age in years, months, and days—plus totals in weeks, days, hours, minutes, and seconds.</p>
-<main class="container grid" id="main">
+<!-- Header -->
+<header class="bg-white shadow-sm sticky top-0 z-50">
+  <nav class="container mx-auto px-4 lg:px-6 py-4">
+    <div class="flex justify-between items-center">
+      <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+
+      <div class="w-full max-w-md hidden md:block mx-8">
+        <div class="relative">
+          <input type="search" id="search-input" placeholder="Search for a calculator..."
+                 class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+                 autocomplete="off">
+          <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400"
+               fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+          </svg>
+          <div id="search-results" class="absolute top-full left-0 right-0 hidden bg-white border border-gray-200 rounded-lg shadow-lg mt-2 max-h-96 overflow-y-auto z-50"></div>
+        </div>
+      </div>
+
+      <div class="hidden md:flex items-center space-x-6 text-sm">
+        <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+        <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+      </div>
+
+      <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+      </button>
+    </div>
+
+    <div id="mobile-menu" class="md:hidden mt-4 hidden">
+      <div class="space-y-2">
+        <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+        <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<main class="container mx-auto px-4 lg:px-6 py-10" id="main">
+  <!-- Breadcrumbs -->
+  <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+    <a href="everyday-life.html" class="hover:text-blue-600">Everyday Life</a> &raquo;
+    <span class="text-gray-900">Age Calculator</span>
+  </nav>
+
+  <div class="bg-white p-6 rounded-lg shadow-md">
+    <h1 id="page-title" class="text-3xl font-extrabold text-gray-900 mb-2">Age Calculator</h1>
+    <p class="text-gray-600 mb-6">Use this authoritative age calculator to compute the exact time between your date of birth and any "as of" date. Designed for everyday use and professional contexts, it returns your age in years, months, and days—plus totals in weeks, days, hours, minutes, and seconds.</p>
+
+<div class="container grid">
 <section aria-labelledby="calculator-heading" class="card panel" id="calculator">
 <h2 id="calculator-heading">Interactive Calculator</h2>
 <div class="form-group">
@@ -764,5 +825,29 @@
       // Accessibility: keyboard space/enter on buttons should click (already default) and ensure focus styles are visible via CSS.
     })();
   </script>
+
+  </div>
+</main>
+
+<footer class="bg-white border-t mt-12">
+  <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+    <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+    <div class="mt-4 space-x-4">
+      <a href="about.html" class="hover:text-blue-600">About</a>
+      <a href="contact.html" class="hover:text-blue-600">Contact</a>
+      <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+      <a href="terms.html" class="hover:text-blue-600">Terms</a>
+    </div>
+  </div>
+</footer>
+
+<script>
+  document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+    const menu = document.getElementById('mobile-menu');
+    menu?.classList.toggle('hidden');
+  });
+</script>
+<script defer src="/assets/js/mobile-menu.js"></script>
+<script defer src="/assets/js/page-enhancements.js"></script>
 
 </body></html>
