--- a/age.html
+++ b/age.html
@@ -392,8 +392,10 @@
 </div>
 <p><span aria-live="polite" class="badge" id="leapNote"></span></p>
 </section>
-</main>
-<section aria-labelledby="authority-content" class="container content">
+</div>
+
+<!-- Content sections (formulas, FAQ, etc.) -->
+<section aria-labelledby="authority-content" class="container content mt-8">
 <h2 id="authority-content">Authoritative Content Ecosystem</h2>
 <section aria-labelledby="data-source">
 <h2 id="data-source">Data Source and Methodology</h2>
