--- a/age.html
+++ b/age.html
@@ -228,24 +228,27 @@
     /* Visible focus for links */
     a:focus{outline:3px solid var(--primary);outline-offset:2px;border-radius:4px}
   </style>
-<!-- Optional, lightweight math rendering via MathJax (deferred) -->
-<script crossorigin="anonymous" defer="" integrity="sha384-jrLZ4L9V5N8jBqjD0CwLgu1/3MXYj9i2fOa4Tn9bV4ZC4j6K9gM7wRk8m9P4G4yC" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<!-- Tailwind CSS and Fonts -->
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<!-- MathJax Configuration (must be before MathJax loads) -->
 <script>
   window.MathJax = {
     tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['\[','\]']]
+      inlineMath: [['\\(','\\)']],
+      displayMath: [['$$','$$'], ['\\[','\\]']]
     },
     svg: { fontCache: 'global' }
   };
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+<!-- Preload and Search Scripts -->
 <link rel="preload" href="/assets/js/mobile-menu.js" as="script">
 <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<script src="search.js" defer></script>
 
 </head>
 <body class="bg-gray-50 text-gray-900">
