--- a/50-30-20-budget.html
+++ b/50-30-20-budget.html
@@ -11,6 +11,16 @@
 <meta content="Use the 50/30/20 budget calculator to allocate your income effectively based on needs, wants, and savings." name="description"/>
 <meta content="Ugo Candido" name="author"/>
 <link href="https://calcdomain.com/50-30-20-budget.html" rel="canonical"/>
+
+<!-- Tailwind CSS and Fonts -->
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<!-- Preload and Search Scripts -->
+<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<script src="search.js" defer></script>
+
 <style>
         :root {
             --primary-color: #005A9C;
@@ -139,11 +149,61 @@
 <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
 
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900">
 
-<main class="container">
-<h1>Budget Calculator (50/30/20 Rule)</h1>
-<p>This calculator helps you apply the 50/30/20 rule to your income, distributing it into needs, wants, and savings. Ideal for individuals looking to manage their finances efficiently.</p>
+<!-- Header -->
+<header class="bg-white shadow-sm sticky top-0 z-50">
+  <nav class="container mx-auto px-4 lg:px-6 py-4">
+    <div class="flex justify-between items-center">
+      <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+
+      <div class="w-full max-w-md hidden md:block mx-8">
+        <div class="relative">
+          <input type="search" id="search-input" placeholder="Search for a calculator..."
+                 class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+                 autocomplete="off">
+          <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400"
+               fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+          </svg>
+          <div id="search-results" class="absolute top-full left-0 right-0 hidden bg-white border border-gray-200 rounded-lg shadow-lg mt-2 max-h-96 overflow-y-auto z-50"></div>
+        </div>
+      </div>
+
+      <div class="hidden md:flex items-center space-x-6 text-sm">
+        <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+        <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+      </div>
+
+      <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+      </button>
+    </div>
+
+    <div id="mobile-menu" class="md:hidden mt-4 hidden">
+      <div class="space-y-2">
+        <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+        <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<main class="container mx-auto px-4 lg:px-6 py-10">
+  <!-- Breadcrumbs -->
+  <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+    <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
+    <span class="text-gray-900">50/30/20 Budget Calculator</span>
+  </nav>
+
+  <div class="bg-white p-6 rounded-lg shadow-md">
+    <h1 class="text-3xl font-extrabold text-gray-900 mb-2">Budget Calculator (50/30/20 Rule)</h1>
+    <p class="text-gray-600 mb-6">This calculator helps you apply the 50/30/20 rule to your income, distributing it into needs, wants, and savings. Ideal for individuals looking to manage their finances efficiently.</p>
 <section aria-labelledby="calculator-heading">
 <h2 id="calculator-heading">Calculator</h2>
 <form id="budget-calculator">
@@ -220,40 +280,28 @@
         }
     </script>
 
+  </div>
+</main>
 
-```
-<footer class="site-footer">
-<div class="container footer-content">
-<div class="footer-column">
-<h4>CalcDomain</h4>
-<p>High-precision tools for professionals.</p>
-</div>
-<div class="footer-column">
-<h4>Calculators</h4>
-<ul class="footer-links">
-<li><a href="/construction.html">Construction</a></li>
-<li><a href="/conversions.html">Conversions</a></li>
-<li><a href="/engineering.html">Engineering</a></li>
-<li><a href="/everyday-life.html">Everyday Life</a></li>
-<li><a href="/finance.html">Finance</a></li>
-<li><a href="/health-and-fitness.html">Health and Fitness</a></li>
-<li><a href="/math.html">Math</a></li>
-<li><a href="/science.html">Science</a></li>
-<li><a href="/taxation.html">Taxation</a></li>
-</ul>
-</div>
-<div class="footer-column">
-<h4>Company</h4>
-<ul>
-<li><a href="/about.html">About Us</a></li>
-<li><a href="/contact.html">Contact</a></li>
-<li><a href="/privacy.html">Privacy Policy</a></li>
-</ul>
-</div>
-</div>
-<div class="container footer-bottom">
-    © 2025 CalcDomain. All Rights Reserved.
+<footer class="bg-white border-t mt-12">
+  <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+    <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+    <div class="mt-4 space-x-4">
+      <a href="about.html" class="hover:text-blue-600">About</a>
+      <a href="contact.html" class="hover:text-blue-600">Contact</a>
+      <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+      <a href="terms.html" class="hover:text-blue-600">Terms</a>
+    </div>
   </div>
 </footer>
+
+<script>
+  document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+    const menu = document.getElementById('mobile-menu');
+    menu?.classList.toggle('hidden');
+  });
+</script>
+<script defer src="/assets/js/mobile-menu.js"></script>
+<script defer src="/assets/js/page-enhancements.js"></script>
 
 </body></html>
