--- a/50-30-20-budget.html
+++ b/50-30-20-budget.html
@@ -134,12 +134,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
+<!-- MathJax Configuration (must be before MathJax loads) -->
 <script>
   window.MathJax = {
     tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['\[','\]']]
+      inlineMath: [['\\(','\\)'], ['$', '$']],
+      displayMath: [['$$','$$'], ['\\[','\\]']]
     },
     svg: { fontCache: 'global' }
   };
