--- a/construction.html
+++ b/construction.html
@@ -44,8 +44,8 @@
 <script>
   window.MathJax = {
     tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['\[','\]']]
+      inlineMath: [['\\(','\\)'], ['$', '$']],
+      displayMath: [['$','$'], ['\\[','\\]']]
     },
     svg: { fontCache: 'global' }
   };
@@ -55,8 +55,50 @@
 <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
 
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900">
 <a class="skip-link" href="#main-content">Skip to main content</a>
+
+<!-- Header -->
+<header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4">
+        <div class="flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+
+            <div class="w-full max-w-md hidden md:block mx-8">
+                <div class="relative">
+                    <input type="search" id="search-input" placeholder="Search for a calculator..."
+                           class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+                           autocomplete="off">
+                    <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400"
+                         fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                    </svg>
+                    <div id="search-results" class="absolute top-full left-0 right-0 hidden bg-white border border-gray-200 rounded-lg shadow-lg mt-2 max-h-96 overflow-y-auto z-50"></div>
+                </div>
+            </div>
+
+            <div class="hidden md:flex items-center space-x-6 text-sm">
+                <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+                <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+            </div>
+
+            <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+
+        <div id="mobile-menu" class="md:hidden mt-4 hidden">
+            <div class="space-y-2">
+                <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+                <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+            </div>
+        </div>
+    </nav>
+</header>
 
 <main class="main-content" id="main-content">
 <div class="container">
@@ -211,25 +253,26 @@
 </section>
 </div>
 </main>
-<!-- Standard Footer --> 
-<!-- NAV: Toggle + Close + Focus Trap + aria-hidden background -->
 
-<!-- Search redirect -->
+<!-- Footer -->
+<footer class="bg-white border-t mt-12">
+    <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+        <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+        <div class="mt-4 space-x-4">
+            <a href="about.html" class="hover:text-blue-600">About</a>
+            <a href="contact.html" class="hover:text-blue-600">Contact</a>
+            <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+            <a href="terms.html" class="hover:text-blue-600">Terms</a>
+        </div>
+    </div>
+</footer>
+
 <script>
-    (function(){
-      const form=document.getElementById('siteSearchForm');
-      const input=document.getElementById('siteSearchInput');
-      if(form&&input){
-        form.addEventListener('submit',e=>{
-          e.preventDefault();
-          const q=(input.value||'').trim();
-          if(!q) return;
-          window.location.href='https://calcdomain.com/search.html?q='+encodeURIComponent(q);
-        });
-      }
-    })();
-  </script>
-<!-- Service worker -->
-
-
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+        const menu = document.getElementById('mobile-menu');
+        menu?.classList.toggle('hidden');
+    });
+</script>
+<script defer src="/assets/js/mobile-menu.js"></script>
+<script defer src="/assets/js/page-enhancements.js"></script>
 </body></html>
