--- a/science.html
+++ b/science.html
@@ -85,12 +85,15 @@
 </header>
 
 <main id="main" class="mx-auto w-full max-w-6xl px-4 py-10 lg:px-6">
-  <nav class="text-sm text-slate-600 mb-4" aria-label="Breadcrumb">
-    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-    <span class="text-slate-900 font-medium">Science Calculators</span>
-  </nav>
+  <div class="flex flex-col lg:flex-row gap-8">
+    <!-- Left Column: Main Content -->
+    <div class="w-full lg:w-2/3">
+      <nav class="text-sm text-slate-600 mb-4" aria-label="Breadcrumb">
+        <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+        <span class="text-slate-900 font-medium">Science Calculators</span>
+      </nav>
 
-  <section class="bg-white rounded-xl shadow-md px-6 py-8 mb-10">
+      <section class="bg-white rounded-xl shadow-md px-6 py-8 mb-10">
     <h1 class="text-3xl font-extrabold text-slate-900 mb-2">Science Calculators</h1>
     <p class="text-slate-600 max-w-3xl">
       Explore calculators for physics, chemistry, astronomy, earth science, biology, and measurement. Each tool includes transparent formulas and methodology, so you can trust the numbers behind your lab work, coursework, or research planning.
@@ -102,11 +105,11 @@
       <a href="#earth" class="rounded-full border border-blue-200 bg-blue-50 px-4 py-2 text-sm font-semibold text-blue-700 hover:bg-blue-100">Earth &amp; Atmosphere</a>
       <a href="#biology" class="rounded-full border border-blue-200 bg-blue-50 px-4 py-2 text-sm font-semibold text-blue-700 hover:bg-blue-100">Biology</a>
       <a href="#measurement" class="rounded-full border border-blue-200 bg-blue-50 px-4 py-2 text-sm font-semibold text-blue-700 hover:bg-blue-100">Measurement</a>
-    </div>
-  </section>
+      </div>
+      </section>
 
-  <section id="categories" class="space-y-12">
-    <section id="physics">
+      <section id="categories" class="space-y-12">
+        <section id="physics">
       <div class="mb-4 flex items-center justify-between">
         <h2 class="text-2xl font-bold text-slate-900">Physics &amp; Mechanics</h2>
         <a href="physics.html" class="text-sm font-semibold text-blue-600 hover:text-blue-800">See all physics calculators →</a>
@@ -270,9 +273,32 @@
     </section>
   </section>
 
-  <section class="mt-12 rounded-xl border border-blue-100 bg-blue-50 px-6 py-5 text-sm text-blue-900">
-    <p><strong>Need something specific?</strong> Use the search bar above or filter by category. Each calculator includes references and detailed methodology so you can cite or audit your calculations.</p>
-  </section>
+      <section class="mt-12 rounded-xl border border-blue-100 bg-blue-50 px-6 py-5 text-sm text-blue-900">
+        <p><strong>Need something specific?</strong> Use the search bar above or filter by category. Each calculator includes references and detailed methodology so you can cite or audit your calculations.</p>
+      </section>
+    </div>
+
+    <!-- Right Sidebar: Ads & Popular Links -->
+    <aside class="w-full lg:w-1/3">
+      <div class="sticky top-24 space-y-8">
+        <!-- Ad Placeholder -->
+        <div class="bg-gray-200 h-96 rounded-lg flex items-center justify-center">
+          <p class="text-gray-500">Sticky Ad Unit (e.g., 300x600)</p>
+        </div>
+
+        <!-- Popular in this Category -->
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h3 class="font-bold text-lg mb-4">Most Popular</h3>
+          <ul class="space-y-3">
+            <li><a href="forward-kinematics.html" class="text-blue-600 hover:underline">Kinematics (SUVAT)</a></li>
+            <li><a href="molecular-weight.html" class="text-blue-600 hover:underline">Molecular Weight Calculator</a></li>
+            <li><a href="orbital-period.html" class="text-blue-600 hover:underline">Orbital Period Calculator</a></li>
+            <li><a href="dew-point.html" class="text-blue-600 hover:underline">Dew Point</a></li>
+          </ul>
+        </div>
+      </div>
+    </aside>
+  </div>
 </main>
 
 <footer class="bg-white border-t mt-12">
