--- a/mm-to-inches.html
+++ b/mm-to-inches.html
@@ -98,7 +98,8 @@
             <section class="w-full lg:w-2/3">
                 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="conversions.html" class="hover:text-blue-600">Conversions</a> &raquo;
+                    <a href="math-conversions.html" class="hover:text-blue-600">Math & Conversion</a> &raquo;
+                    <a href="subcategories/measurement-unit-conversions.html" class="hover:text-blue-600">Unit Conversions</a> &raquo;
                     <span class="text-gray-900">Millimeters to Inches</span>
                 </nav>
 
