--- a/subcategories/measurement-unit-conversions.html
+++ b/subcategories/measurement-unit-conversions.html
@@ -24,30 +24,56 @@
 <script>
   window.MathJax = {
     tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['\[','\]']]
+      inlineMath: [['\\(','\\)'], ['$', '$']],
+      displayMath: [['$','$'], ['\\[','\\]']]
     },
     svg: { fontCache: 'global' }
   };
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
 
 </head>
 <body class="bg-gray-50 text-gray-800">
 
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
-        <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center">
-            <a href="../index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
-            <div class="w-full max-w-md hidden md:block">
-                <div class="relative">
-                    <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500">
-                     <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+        <nav class="container mx-auto px-4 lg:px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="../index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+
+                <div class="w-full max-w-md hidden md:block mx-8">
+                    <div class="relative">
+                        <input type="search" id="search-input" placeholder="Search for a calculator..."
+                               class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+                               autocomplete="off">
+                        <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400"
+                             fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                        </svg>
+                        <div id="search-results" class="absolute top-full left-0 right-0 hidden bg-white border border-gray-200 rounded-lg shadow-lg mt-2 max-h-96 overflow-y-auto z-50"></div>
+                    </div>
+                </div>
+
+                <div class="hidden md:flex items-center space-x-6 text-sm">
+                    <a href="../search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="../index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+                </div>
+
+                <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </button>
+            </div>
+
+            <div id="mobile-menu" class="md:hidden mt-4 hidden">
+                <div class="space-y-2">
+                    <a href="../search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="../index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
                 </div>
             </div>
-             <div class="hidden md:block"></div>
         </nav>
     </header>
 
@@ -73,6 +99,45 @@
                 <!-- Calculators Grid -->
                 <section>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                            <!-- Completed Individual Converters -->
+                            <a href="../mm-to-inches.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Millimeters to Inches</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert millimeters to inches with precision.</p>
+                                </div>
+                            </a>
+                            <a href="../kg-to-lbs.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Kilograms to Pounds</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert weight from kilograms to pounds.</p>
+                                </div>
+                            </a>
+                            <a href="../feet-to-meters.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Feet to Meters</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert length from feet to meters.</p>
+                                </div>
+                            </a>
+                            <a href="../celsius-to-fahrenheit.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Celsius to Fahrenheit</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert temperature from Celsius to Fahrenheit.</p>
+                                </div>
+                            </a>
+
+                            <!-- General Converters -->
                             <a href="length-converter.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
@@ -504,10 +569,22 @@
     
     <!-- Footer -->
     <footer class="bg-white border-t mt-12">
-        <div class="container mx-auto px-6 py-8 text-center text-gray-600">
+        <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
             <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+            <div class="mt-4 space-x-4">
+                <a href="../about.html" class="hover:text-blue-600">About</a>
+                <a href="../contact.html" class="hover:text-blue-600">Contact</a>
+                <a href="../privacy.html" class="hover:text-blue-600">Privacy</a>
+                <a href="../terms.html" class="hover:text-blue-600">Terms</a>
+            </div>
         </div>
     </footer>
 
+    <script>
+        document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+            const menu = document.getElementById('mobile-menu');
+            menu?.classList.toggle('hidden');
+        });
+    </script>
 </body>
 </html>
