--- a/sip-calculator.html
+++ b/sip-calculator.html
@@ -447,8 +447,14 @@
 
   <!-- Footer -->
   <footer class="bg-white border-t mt-12">
-    <div class="container mx-auto px-6 py-8 text-center text-gray-600">
+    <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
       <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+      <div class="mt-4 space-x-4">
+        <a href="about.html" class="hover:text-blue-600">About</a>
+        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+        <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+        <a href="terms.html" class="hover:text-blue-600">Terms</a>
+      </div>
     </div>
   </footer>
 
