--- a/feet-to-meters.html
+++ b/feet-to-meters.html
@@ -128,23 +128,25 @@
                     </div>
                 </div>
 
+                
+                <div class="hidden md:flex items-center space-x-6 text-sm">
+                    <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+                </div>
+
                 <!-- Mobile Menu Button -->
-                <button id="mobile-menu-btn" class="md:hidden p-2 rounded-lg hover:bg-gray-100">
+                <button id="mobile-menu-toggle" class="md:hidden p-2 rounded-lg hover:bg-gray-100">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
                 </button>
             </div>
 
-            <!-- Mobile Search (hidden by default) -->
-            <div id="mobile-search" class="md:hidden mt-4 hidden">
-                <input
-                    type="text"
-                    id="mobile-search-input"
-                    placeholder="Search calculators..."
-                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                >
-                <div id="mobile-search-results" class="mt-1 bg-white border border-gray-200 rounded-lg shadow-lg hidden max-h-96 overflow-y-auto">
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="md:hidden mt-4 hidden">
+                <div class="space-y-2">
+                    <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
                 </div>
             </div>
         </div>
@@ -350,11 +352,9 @@
 
     <!-- Mobile Menu Script -->
     <script>
-        const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-        const mobileSearch = document.getElementById('mobile-search');
-
-        mobileMenuBtn.addEventListener('click', () => {
-            mobileSearch.classList.toggle('hidden');
+        document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+            const menu = document.getElementById('mobile-menu');
+            menu?.classList.toggle('hidden');
         });
     </script>
 
