--- a/subcategories/measurement-unit-conversions.html
+++ b/subcategories/measurement-unit-conversions.html
@@ -325,6 +325,42 @@
                                     <p class="text-sm text-gray-600 mt-1">Convert length from picometers to angstroms.</p>
                                 </div>
                             </a>
+                            <a href="../atm-to-psi.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Atmospheres to PSI</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert pressure from atmospheres to PSI.</p>
+                                </div>
+                            </a>
+                            <a href="../psi-to-atm.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">PSI to Atmospheres</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert pressure from PSI to atmospheres.</p>
+                                </div>
+                            </a>
+                            <a href="../psi-to-bar.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">PSI to Bar</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert pressure from PSI to bar.</p>
+                                </div>
+                            </a>
+                            <a href="../pascals-to-psi.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Pascals to PSI</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Convert pressure from pascals to PSI.</p>
+                                </div>
+                            </a>
 
                             <!-- General Converters -->
                             <a href="length-converter.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
