calorie-to-btu.html

--- a/btu-to-calories.html
+++ b/btu-to-calories.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calorie to BTU Converter - CalcDomain</title>
-    <meta name="description" content="Convert calories to BTUs instantly with our accurate energy unit converter. Perfect for engineers and scientists requiring precise energy measurements.">
-    <link rel="canonical" href="https://calcdomain.com/calorie-to-btu.html">
+    <title>BTU to Calories Converter - CalcDomain</title>
+    <meta name="description" content="Convert BTU to calories instantly with our accurate energy unit converter. Perfect for engineers and scientists requiring precise energy measurements.">
+    <link rel="canonical" href="https://calcdomain.com/btu-to-calories.html">
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -33,9 +33,9 @@
     {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Calorie to BTU Converter",
-        "description": "Convert calories to BTUs instantly with our accurate energy unit converter.",
-        "url": "https://calcdomain.com/calorie-to-btu.html",
+        "name": "BTU to Calories Converter",
+        "description": "Convert BTU to calories instantly with our accurate energy unit converter.",
+        "url": "https://calcdomain.com/btu-to-calories.html",
         "author": {
             "@type": "Person",
             "name": "Ugo Candido"
@@ -105,16 +105,16 @@
             <span class="mx-2">»</span>
             <a href="/subcategories/measurement-unit-conversions.html" class="hover:text-blue-600">Unit Conversions</a>
             <span class="mx-2">»</span>
-            <span>Calorie to BTU</span>
+            <span>BTU to Calories</span>
         </nav>
 
         <div class="flex flex-col lg:flex-row gap-8">
             <!-- Main Content Column -->
             <div class="lg:w-2/3">
-                <h1 class="text-4xl font-bold text-gray-800 mb-6">Calorie to BTU Converter</h1>
+                <h1 class="text-4xl font-bold text-gray-800 mb-6">BTU to Calories Converter</h1>
 
                 <p class="text-gray-700 mb-8">
-                    Convert calories to British Thermal Units (BTU) instantly with our accurate energy unit converter. Perfect for engineers, scientists, and students requiring precise energy measurements in heating, air conditioning, and thermodynamics calculations.
+                    Convert British Thermal Units (BTU) to calories instantly with our accurate energy unit converter. Perfect for engineers, scientists, and students requiring precise energy measurements in heating, air conditioning, and thermodynamics calculations.
                 </p>
 
                 <!-- Calculator Section -->
@@ -123,22 +123,22 @@
 
                     <div class="space-y-4">
                         <div>
-                            <label for="calorieInput" class="block text-sm font-medium text-gray-700 mb-2">
-                                Enter Calories
+                            <label for="btuInput" class="block text-sm font-medium text-gray-700 mb-2">
+                                Enter BTU
                             </label>
                             <input
                                 type="number"
-                                id="calorieInput"
-                                oninput="convertCalorieToBtu()"
+                                id="btuInput"
+                                oninput="convertBtuToCalories()"
                                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                                placeholder="Enter calories"
+                                placeholder="Enter BTU"
                                 step="any"
                             />
                         </div>
 
                         <div class="bg-blue-50 p-6 rounded-lg">
                             <div class="text-sm text-gray-600 mb-1">Result:</div>
-                            <div id="btuResult" class="text-3xl font-bold text-blue-600">0.00 BTU</div>
+                            <div id="caloriesResult" class="text-3xl font-bold text-blue-600">0.00 cal</div>
                         </div>
                     </div>
                 </div>
@@ -148,16 +148,16 @@
                     <h2 class="text-2xl font-semibold text-gray-800 mb-4">Formula</h2>
                     <div class="bg-gray-50 p-4 rounded-lg mb-4">
                         <p class="text-center text-lg">
-                            \[ \text{BTU} = \text{Calories} \times 0.00396567 \]
+                            \[ \text{Calories} = \text{BTU} \div 0.00396567 \]
                         </p>
                     </div>
                     <p class="text-gray-700">
                         Where:
                     </p>
                     <ul class="list-disc list-inside text-gray-700 mt-2 space-y-1">
-                        <li><strong>BTU</strong> = British Thermal Unit</li>
-                        <li><strong>Calories</strong> = Input value in calories (thermochemical calorie)</li>
-                        <li><strong>0.00396567</strong> = Conversion factor</li>
+                        <li><strong>Calories</strong> = Output value in thermochemical calories</li>
+                        <li><strong>BTU</strong> = Input value in British Thermal Units</li>
+                        <li><strong>0.00396567</strong> = Conversion factor (1 cal = 0.00396567 BTU)</li>
                     </ul>
                 </div>
 
@@ -165,7 +165,7 @@
                 <div class="bg-white rounded-lg shadow-md p-6 mb-8">
                     <h2 class="text-2xl font-semibold text-gray-800 mb-4">Data Source and Methodology</h2>
                     <p class="text-gray-700">
-                        All calculations are based on standard thermodynamic conversion factors recognized by engineering and scientific communities. The conversion factor is derived from the definition that 1 thermochemical calorie equals approximately 0.00396567 BTU.
+                        All calculations are based on standard thermodynamic conversion factors recognized by engineering and scientific communities. The conversion factor is derived from the definition that 1 thermochemical calorie equals approximately 0.00396567 BTU, making 1 BTU equal to approximately 252.164 calories.
                     </p>
                 </div>
 
@@ -173,13 +173,13 @@
                 <div class="bg-white rounded-lg shadow-md p-6 mb-8">
                     <h2 class="text-2xl font-semibold text-gray-800 mb-4">Step-by-Step Example</h2>
                     <p class="text-gray-700 mb-4">
-                        <strong>Example:</strong> Convert 500 calories to BTU
+                        <strong>Example:</strong> Convert 10 BTU to calories
                     </p>
                     <ol class="list-decimal list-inside text-gray-700 space-y-2">
-                        <li>Start with the value: 500 calories</li>
-                        <li>Apply the formula: BTU = 500 × 0.00396567</li>
-                        <li>Calculate: BTU = 1.982835</li>
-                        <li>Result: 500 calories = 1.98 BTU</li>
+                        <li>Start with the value: 10 BTU</li>
+                        <li>Apply the formula: Calories = 10 ÷ 0.00396567</li>
+                        <li>Calculate: Calories = 2521.64</li>
+                        <li>Result: 10 BTU = 2,521.64 calories</li>
                     </ol>
                 </div>
 
@@ -188,12 +188,12 @@
                     <h2 class="text-2xl font-semibold text-gray-800 mb-4">Glossary of Terms</h2>
                     <dl class="space-y-3">
                         <div>
-                            <dt class="font-semibold text-gray-800">Calorie (cal)</dt>
-                            <dd class="text-gray-700 ml-4">A unit of energy commonly used in chemistry and nutrition. The thermochemical calorie is defined as exactly 4.184 joules.</dd>
-                        </div>
-                        <div>
                             <dt class="font-semibold text-gray-800">British Thermal Unit (BTU)</dt>
                             <dd class="text-gray-700 ml-4">A traditional unit of heat energy used in heating, ventilation, and air conditioning industries. One BTU is the amount of heat required to raise the temperature of one pound of water by one degree Fahrenheit.</dd>
+                        </div>
+                        <div>
+                            <dt class="font-semibold text-gray-800">Calorie (cal)</dt>
+                            <dd class="text-gray-700 ml-4">A unit of energy commonly used in chemistry and nutrition. The thermochemical calorie is defined as exactly 4.184 joules.</dd>
                         </div>
                         <div>
                             <dt class="font-semibold text-gray-800">Energy</dt>
@@ -208,13 +208,13 @@
 
                     <div class="space-y-4">
                         <div>
-                            <h3 class="font-semibold text-gray-800 mb-2">What is a BTU?</h3>
-                            <p class="text-gray-700">A British Thermal Unit (BTU) is a traditional unit of heat energy. It's the amount of heat required to raise the temperature of one pound of water by one degree Fahrenheit at sea level.</p>
+                            <h3 class="font-semibold text-gray-800 mb-2">What is a calorie?</h3>
+                            <p class="text-gray-700">A calorie is a unit of energy commonly used in chemistry and nutrition. The thermochemical calorie is defined as exactly 4.184 joules. Note that food "Calories" (with capital C) are actually kilocalories, equal to 1000 thermochemical calories.</p>
                         </div>
 
                         <div>
-                            <h3 class="font-semibold text-gray-800 mb-2">How do I convert calories to BTU?</h3>
-                            <p class="text-gray-700">Simply multiply the number of calories by 0.00396567 to get the equivalent value in BTU. Our converter does this calculation instantly for you.</p>
+                            <h3 class="font-semibold text-gray-800 mb-2">How do I convert BTU to calories?</h3>
+                            <p class="text-gray-700">Simply divide the number of BTU by 0.00396567 to get the equivalent value in calories. Our converter does this calculation instantly for you.</p>
                         </div>
 
                         <div>
@@ -223,13 +223,13 @@
                         </div>
 
                         <div>
-                            <h3 class="font-semibold text-gray-800 mb-2">What are common uses for BTU?</h3>
-                            <p class="text-gray-700">BTU is commonly used in heating, air conditioning, and power generation calculations. It's the standard unit for rating furnaces, air conditioners, and water heaters in many countries.</p>
+                            <h3 class="font-semibold text-gray-800 mb-2">What are common uses for calories?</h3>
+                            <p class="text-gray-700">Calories are commonly used in chemistry, nutrition science, and thermodynamics. They are particularly useful for measuring heat energy in chemical reactions and food energy content.</p>
                         </div>
 
                         <div>
                             <h3 class="font-semibold text-gray-800 mb-2">Who can benefit from this tool?</h3>
-                            <p class="text-gray-700">Engineers, scientists, HVAC technicians, students, and anyone working with energy measurements in different unit systems can benefit from this accurate conversion tool.</p>
+                            <p class="text-gray-700">Engineers, scientists, chemists, nutritionists, students, and anyone working with energy measurements in different unit systems can benefit from this accurate conversion tool.</p>
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="bg-gray-50 rounded-lg p-6 border-l-4 border-blue-600">
                     <p class="text-sm text-gray-600">
                         <strong>Author:</strong> Ugo Candido<br>
-                        <strong>Last Updated:</strong> October 2023<br>
+                        <strong>Last Updated:</strong> October 2024<br>
                         Content verified by CalcDomain Expert Team for accuracy and reliability.
                     </p>
                 </div>
@@ -250,30 +250,30 @@
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">Common Conversions</h3>
                     <div class="space-y-2 text-sm">
                         <div class="flex justify-between py-2 border-b">
-                            <span>100 cal</span>
-                            <span class="font-semibold">0.40 BTU</span>
+                            <span>1 BTU</span>
+                            <span class="font-semibold">252.16 cal</span>
                         </div>
                         <div class="flex justify-between py-2 border-b">
-                            <span>250 cal</span>
-                            <span class="font-semibold">0.99 BTU</span>
+                            <span>5 BTU</span>
+                            <span class="font-semibold">1,260.82 cal</span>
                         </div>
                         <div class="flex justify-between py-2 border-b">
-                            <span>500 cal</span>
-                            <span class="font-semibold">1.98 BTU</span>
+                            <span>10 BTU</span>
+                            <span class="font-semibold">2,521.64 cal</span>
                         </div>
                         <div class="flex justify-between py-2 border-b">
-                            <span>1,000 cal</span>
-                            <span class="font-semibold">3.97 BTU</span>
+                            <span>50 BTU</span>
+                            <span class="font-semibold">12,608.20 cal</span>
                         </div>
                         <div class="flex justify-between py-2">
-                            <span>5,000 cal</span>
-                            <span class="font-semibold">19.83 BTU</span>
+                            <span>100 BTU</span>
+                            <span class="font-semibold">25,216.40 cal</span>
                         </div>
                     </div>
 
                     <h3 class="text-xl font-semibold text-gray-800 mt-6 mb-4">Related Converters</h3>
                     <div class="space-y-2">
-                        <a href="/btu-to-calories.html" class="block text-blue-600 hover:text-blue-800 hover:underline">BTU to Calories</a>
+                        <a href="/calorie-to-btu.html" class="block text-blue-600 hover:text-blue-800 hover:underline">Calories to BTU</a>
                         <a href="/calories-to-joules.html" class="block text-blue-600 hover:text-blue-800 hover:underline">Calories to Joules</a>
                         <a href="/btu-to-joules.html" class="block text-blue-600 hover:text-blue-800 hover:underline">BTU to Joules</a>
                         <a href="/joules-to-btu.html" class="block text-blue-600 hover:text-blue-800 hover:underline">Joules to BTU</a>
@@ -310,24 +310,24 @@
 
     <!-- Conversion Script -->
     <script>
-        function convertCalorieToBtu() {
-            const calorieInput = document.getElementById('calorieInput').value;
-            const resultElement = document.getElementById('btuResult');
+        function convertBtuToCalories() {
+            const btuInput = document.getElementById('btuInput').value;
+            const resultElement = document.getElementById('caloriesResult');
 
-            if (calorieInput === '' || calorieInput === null) {
-                resultElement.textContent = '0.00 BTU';
+            if (btuInput === '' || btuInput === null) {
+                resultElement.textContent = '0.00 cal';
                 return;
             }
 
-            const calories = parseFloat(calorieInput);
+            const btu = parseFloat(btuInput);
 
-            if (isNaN(calories)) {
+            if (isNaN(btu)) {
                 resultElement.textContent = 'Invalid input';
                 return;
             }
 
-            const btu = calories * 0.00396567;
-            resultElement.textContent = btu.toFixed(2) + ' BTU';
+            const calories = btu / 0.00396567;
+            resultElement.textContent = calories.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + ' cal';
         }
     </script>
 </body>
