carat-to-grams.html grams-to-carats.html pounds-to-grams.html

--- a/carat-to-grams.html
+++ b/carat-to-grams.html
@@ -85,8 +85,8 @@
 <script>
   window.MathJax = {
     tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
+      inlineMath: [['\\(','\\)']],
+      displayMath: [['\\[','\\]']]
     },
     svg: { fontCache: 'global' }
   };
