--- a/grams-to-carats.html
+++ b/grams-to-carats.html
@@ -85,8 +85,8 @@
 <script>
   window.MathJax = {
     tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
+      inlineMath: [['\\(','\\)']],
+      displayMath: [['\\[','\\]']]
     },
     svg: { fontCache: 'global' }
   };
