--- a/grams-to-pounds.html
+++ b/grams-to-pounds.html
@@ -8,9 +8,9 @@
 <link rel="manifest" href="/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pounds to Grams Converter - Accurate Weight Conversion Tool</title>
-    <meta name="description" content="Convert pounds to grams instantly with our accurate weight unit converter. Perfect for cooking, shipping, fitness tracking, and everyday measurements.">
-    <link rel="canonical" href="https://calcdomain.com/pounds-to-grams.html"/>
+    <title>Grams to Pounds Converter - Accurate Weight Conversion Tool</title>
+    <meta name="description" content="Convert grams to pounds instantly with our accurate weight unit converter. Perfect for cooking, shipping, fitness tracking, and everyday measurements.">
+    <link rel="canonical" href="https://calcdomain.com/grams-to-pounds.html"/>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -28,9 +28,9 @@
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "Pounds to Grams Converter",
-      "description": "Convert pounds to grams instantly with our accurate weight unit converter.",
-      "url": "https://calcdomain.com/pounds-to-grams.html",
+      "name": "Grams to Pounds Converter",
+      "description": "Convert grams to pounds instantly with our accurate weight unit converter.",
+      "url": "https://calcdomain.com/grams-to-pounds.html",
       "inLanguage": "en",
       "author": {
         "@type": "Person",
@@ -152,30 +152,30 @@
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="categories/math-conversion.html" class="hover:text-blue-600">Math & Conversion</a> &raquo;
                     <a href="/subcategories/measurement-unit-conversions.html" class="hover:text-blue-600">Unit Conversions</a> &raquo;
-                    <span>Pounds to Grams Converter</span>
+                    <span>Grams to Pounds Converter</span>
                 </nav>
 
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <!-- Calculator Title and Intro -->
-                    <h1 class="text-3xl font-bold mb-2">Pounds to Grams Converter</h1>
-                    <p class="text-gray-600 mb-6">Convert pounds to grams instantly. Perfect for cooking, baking, shipping, fitness tracking, and converting between imperial and metric measurements.</p>
+                    <h1 class="text-3xl font-bold mb-2">Grams to Pounds Converter</h1>
+                    <p class="text-gray-600 mb-6">Convert grams to pounds instantly. Perfect for cooking, baking, shipping, fitness tracking, and converting between metric and imperial measurements.</p>
 
                     <!-- Calculator Form -->
                     <div class="space-y-6">
                         <div>
-                            <label for="poundsInput" class="block text-sm font-medium text-gray-700 mb-2">Enter Pounds</label>
+                            <label for="gramsInput" class="block text-sm font-medium text-gray-700 mb-2">Enter Grams</label>
                             <input
                                 type="number"
-                                id="poundsInput"
+                                id="gramsInput"
                                 class="w-full px-4 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                                placeholder="Enter pounds"
+                                placeholder="Enter grams"
                                 step="any"
                             />
                         </div>
 
                         <div class="bg-blue-50 p-6 rounded-lg border border-blue-200">
                             <div class="text-sm text-gray-600 mb-1">Result:</div>
-                            <div id="gramsResult" class="text-3xl font-bold text-blue-600">0.00 g</div>
+                            <div id="poundsResult" class="text-3xl font-bold text-blue-600">0.00 lb</div>
                         </div>
                     </div>
                 </div>
@@ -184,43 +184,43 @@
                 <div class="mt-8 prose prose-blue max-w-none">
                     <h2>Formula</h2>
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
-                        <p class="text-center">\[ \text{Grams} = \text{Pounds} \times 453.59237 \]</p>
+                        <p class="text-center">\[ \text{Pounds} = \text{Grams} \div 453.59237 \]</p>
                     </div>
-                    <p>Where 1 pound = 453.59237 grams (international avoirdupois pound).</p>
+                    <p>Where 1 pound = 453.59237 grams, so to convert grams to pounds, divide by 453.59237.</p>
 
                     <h2>How It Works</h2>
-                    <p>The international avoirdupois pound is legally defined as exactly 453.59237 grams. This conversion factor is recognized worldwide by both imperial and metric measurement systems.</p>
+                    <p>The international avoirdupois pound is legally defined as exactly 453.59237 grams. To convert grams to pounds, divide the number of grams by this conversion factor.</p>
 
                     <h3>Example Calculation</h3>
-                    <p>To convert 5 pounds to grams:</p>
+                    <p>To convert 1000 grams to pounds:</p>
                     <ol>
-                        <li>Start with 5 pounds</li>
-                        <li>Multiply by 453.59237: 5 × 453.59237 = 2267.96185</li>
-                        <li>Result: 5 pounds = 2,267.96 grams</li>
+                        <li>Start with 1000 grams</li>
+                        <li>Divide by 453.59237: 1000 ÷ 453.59237 = 2.20462</li>
+                        <li>Result: 1000 grams = 2.20 pounds</li>
                     </ol>
 
                     <h2>Common Conversions</h2>
                     <ul>
-                        <li>1 pound = 453.59 grams</li>
-                        <li>5 pounds = 2,267.96 grams</li>
-                        <li>10 pounds = 4,535.92 grams</li>
-                        <li>25 pounds = 11,339.81 grams</li>
-                        <li>100 pounds = 45,359.24 grams</li>
+                        <li>100 grams = 0.22 pounds</li>
+                        <li>500 grams = 1.10 pounds</li>
+                        <li>1000 grams (1 kg) = 2.20 pounds</li>
+                        <li>2000 grams (2 kg) = 4.41 pounds</li>
+                        <li>5000 grams (5 kg) = 11.02 pounds</li>
                     </ul>
 
                     <h2>Frequently Asked Questions</h2>
 
-                    <h3>How do I convert pounds to grams?</h3>
-                    <p>Multiply the number of pounds by 453.59237 to get the equivalent value in grams. For example, 2 pounds = 2 × 453.59237 = 907.18 grams.</p>
+                    <h3>How do I convert grams to pounds?</h3>
+                    <p>Divide the number of grams by 453.59237 to get the equivalent value in pounds. For example, 1000 grams = 1000 ÷ 453.59237 = 2.20 pounds.</p>
 
-                    <h3>What is a pound?</h3>
-                    <p>A pound (lb) is a unit of weight commonly used in the United States and other countries that use imperial measurements. One pound equals exactly 453.59237 grams.</p>
+                    <h3>What is a gram?</h3>
+                    <p>A gram (g) is a metric unit of mass equal to one thousandth of a kilogram. It is commonly used worldwide for measuring food, small objects, and body weight.</p>
 
                     <h3>Why is this conversion useful?</h3>
                     <p>This conversion is essential when working with recipes from different countries, shipping packages internationally, or converting body weight between measurement systems.</p>
 
-                    <h3>How many grams are in a pound?</h3>
-                    <p>There are exactly 453.59237 grams in one pound. This is the internationally accepted conversion factor.</p>
+                    <h3>How many pounds are in 1000 grams?</h3>
+                    <p>1000 grams equals approximately 2.20462 pounds. This is often rounded to 2.2 pounds for everyday use.</p>
 
                     <h2>Data Source and Methodology</h2>
                     <p>All calculations are based on the international avoirdupois pound definition (453.59237 grams), recognized worldwide.</p>
@@ -240,7 +240,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related Converters</h3>
                         <ul class="space-y-3">
-                            <li><a href="grams-to-pounds.html" class="text-blue-600 hover:underline">Grams to Pounds</a></li>
+                            <li><a href="pounds-to-grams.html" class="text-blue-600 hover:underline">Pounds to Grams</a></li>
                             <li><a href="pounds-to-kilograms.html" class="text-blue-600 hover:underline">Pounds to Kilograms</a></li>
                             <li><a href="grams-to-ounces.html" class="text-blue-600 hover:underline">Grams to Ounces</a></li>
                             <li><a href="ounces-to-grams.html" class="text-blue-600 hover:underline">Ounces to Grams</a></li>
@@ -272,16 +272,16 @@
         (function() {
             'use strict';
 
-            const poundsInput = document.getElementById('poundsInput');
-            const gramsResult = document.getElementById('gramsResult');
+            const gramsInput = document.getElementById('gramsInput');
+            const poundsResult = document.getElementById('poundsResult');
 
-            function convertPoundsToGrams() {
-                const pounds = parseFloat(poundsInput.value) || 0;
-                const grams = pounds * 453.59237;
-                gramsResult.textContent = grams.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) + ' g';
+            function convertGramsToPounds() {
+                const grams = parseFloat(gramsInput.value) || 0;
+                const pounds = grams / 453.59237;
+                poundsResult.textContent = pounds.toFixed(2) + ' lb';
             }
 
-            poundsInput.addEventListener('input', convertPoundsToGrams);
+            gramsInput.addEventListener('input', convertGramsToPounds);
 
             // Mobile menu toggle
             const mobileToggle = document.getElementById('mobile-menu-toggle');
@@ -293,7 +293,7 @@
             }
 
             // Initial calculation
-            convertPoundsToGrams();
+            convertGramsToPounds();
         })();
     </script>
 </body>
