--- a/cylindrical-to-cartesian.html
+++ b/cylindrical-to-cartesian.html
@@ -217,9 +217,9 @@
                 <div class="mt-8 prose prose-blue max-w-none">
                     <h2>Formulas</h2>
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
-                        <p class="text-center">\\[ x = r \\cdot \\cos(\\theta) \\]</p>
-                        <p class="text-center">\\[ y = r \\cdot \\sin(\\theta) \\]</p>
-                        <p class="text-center">\\[ z = z \\]</p>
+                        <p class="text-center">\[ x = r \cdot \cos(\theta) \]</p>
+                        <p class="text-center">\[ y = r \cdot \sin(\theta) \]</p>
+                        <p class="text-center">\[ z = z \]</p>
                     </div>
                     <p>Where r is the radial distance from the z-axis, θ (theta) is the angle in the xy-plane from the positive x-axis, and z is the height above the xy-plane.</p>
 
