--- a/spherical-to-cartesian.html
+++ b/spherical-to-cartesian.html
@@ -217,9 +217,9 @@
                 <div class="mt-8 prose prose-blue max-w-none">
                     <h2>Formulas</h2>
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
-                        <p class="text-center">\\[ x = r \\cdot \\sin(\\theta) \\cdot \\cos(\\phi) \\]</p>
-                        <p class="text-center">\\[ y = r \\cdot \\sin(\\theta) \\cdot \\sin(\\phi) \\]</p>
-                        <p class="text-center">\\[ z = r \\cdot \\cos(\\theta) \\]</p>
+                        <p class="text-center">\[ x = r \cdot \sin(\theta) \cdot \cos(\phi) \]</p>
+                        <p class="text-center">\[ y = r \cdot \sin(\theta) \cdot \sin(\phi) \]</p>
+                        <p class="text-center">\[ z = r \cdot \cos(\theta) \]</p>
                     </div>
                     <p>Where r is the radial distance from the origin, θ (theta) is the polar angle from the positive z-axis, and φ (phi) is the azimuthal angle in the xy-plane from the positive x-axis.</p>
 
