--- a/cartesian-to-polar.html
+++ b/cartesian-to-polar.html
@@ -203,8 +203,8 @@
                 <div class="mt-8 prose prose-blue max-w-none">
                     <h2>Formulas</h2>
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
-                        <p class="text-center">\\[ r = \sqrt{x^2 + y^2} \\]</p>
-                        <p class="text-center">\\[ \\theta = \\arctan\\left(\\frac{y}{x}\\right) \\]</p>
+                        <p class="text-center">\[ r = \sqrt{x^2 + y^2} \]</p>
+                        <p class="text-center">\[ \theta = \arctan\left(\frac{y}{x}\right) \]</p>
                     </div>
                     <p>Where r is the radial distance from the origin, and θ (theta) is the angle measured counterclockwise from the positive x-axis.</p>
 
