--- a/cartesian-to-spherical.html
+++ b/cartesian-to-spherical.html
@@ -217,9 +217,9 @@
                 <div class="mt-8 prose prose-blue max-w-none">
                     <h2>Formulas</h2>
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
-                        <p class="text-center">\\[ r = \sqrt{x^2 + y^2 + z^2} \\]</p>
-                        <p class="text-center">\\[ \\theta = \\arccos\\left(\\frac{z}{r}\\right) \\]</p>
-                        <p class="text-center">\\[ \\phi = \\arctan\\left(\\frac{y}{x}\\right) \\]</p>
+                        <p class="text-center">\[ r = \sqrt{x^2 + y^2 + z^2} \]</p>
+                        <p class="text-center">\[ \theta = \arccos\left(\frac{z}{r}\right) \]</p>
+                        <p class="text-center">\[ \phi = \arctan\left(\frac{y}{x}\right) \]</p>
                     </div>
                     <p>Where r is the radial distance from the origin, θ (theta) is the polar angle from the positive z-axis, and φ (phi) is the azimuthal angle in the xy-plane from the positive x-axis.</p>
 
