--- a/polar-to-cartesian.html
+++ b/polar-to-cartesian.html
@@ -203,8 +203,8 @@
                 <div class="mt-8 prose prose-blue max-w-none">
                     <h2>Formulas</h2>
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
-                        <p class="text-center">\\[ x = r \\cdot \\cos(\\theta) \\]</p>
-                        <p class="text-center">\\[ y = r \\cdot \\sin(\\theta) \\]</p>
+                        <p class="text-center">\[ x = r \cdot \cos(\theta) \]</p>
+                        <p class="text-center">\[ y = r \cdot \sin(\theta) \]</p>
                     </div>
                     <p>Where r is the radial distance from the origin, and θ (theta) is the angle measured counterclockwise from the positive x-axis.</p>
 
